--- a/src/main/app/mule-deploy.properties
+++ b/src/main/app/mule-deploy.properties
@@ -1,5 +1,5 @@
-#Tue Jan 01 12:31:08 EST 2019
+#Tue Feb 19 16:10:44 EST 2019
 encoding=UTF-8
-domain=default
+domain=course-domain
 redeployment.enabled=true
 config.resources=subject-demo.xml
